fixed alignment

--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 h1 {
+    font-size: 30px;
     text-align: center;
     background-color: rgb(189, 118, 255);
     padding: 30px;
-    margin: 20px;
+    margin: auto;
+    border: 3px solid rgb(110, 79, 248);
 }
 
 a:link { 
@@ -14,7 +16,7 @@ a:visited {
 } 
 
 a:hover { 
-    text-decoration: wavy;
+    text-decoration: none;
 } 
 
 a:active { 
@@ -27,22 +29,20 @@ li {
     text-align: center;
 }
 
-div {
-    padding: 20px;
-    margin: 5px;
+div .item{
+    padding: 10px;
+    margin: 3px;
+    border: 3px solid rgb(206, 65, 175);
 }
 
-.first {
+.item-1 {
     background-color: aquamarine;
 }
 
-.second {
+.item-2 {
     background-color: aqua;
 }
 
-.third {
+.item-3 {
     background-color: bisque;
 }
-
-
-  
